# cold-outreach-scrapper

./: .env.example  .gitignore  .nano.swp  dashboard.py  docker-compose.yml  main.py  profiles_Cape_Town.json  pyproject.toml  scraped_all_regions.csv  scraped_all_regions.json  scraped_all_regions_batch_one.csv  settings.py
.claude/projects/-Users-racqueldennison-Documents-side-projects-cold-outreach-scrapper/memory/: MEMORY.md  feedback_collaborative.md  user_profile.md
agents/: graph.py  state.py
agents/nodes/: outreach.py  planner.py  scrapper.py
db/: __init__.py  crud.py  init_db.py  models.py  session.py
scraper/: __init__.py  browser.py  selectors.py  virgin_active.py
skills/virgin-active-pt-scraper/: SKILLS.md
skills/virgin-active-pt-scraper/references/: anti-detection.md  schema.md  selectors.md
tools/: playwright_tools.py
