[project]
name = "cold-outreach-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30",
    "langchain-anthropic>=1.4.0",
    "langgraph>=1.1.3",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0",
    "streamlit>=1.55.0",
]
